feat(js): add game function and result

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Pali e Dispari</title>
 </head>
 <body>
+    <main>
+        <h1 id="game"></h1>
+        <span id="gameInfo"></span>
+    </main>
     <script src="./Assets/js/main.js"></script>
 </body>
 </html>
