--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <main>
         <h1 id="game"></h1>
         <span id="gameInfo"></span>
+        <button id="btnReload" class="dNone">RIPROVA!</button>
+        <div class="firework dNone"></div>
     </main>
     <script src="./Assets/js/main.js"></script>
 </body>
